load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "authschema",
    srcs = [
        "privacy.go",
        "schema.go",
    ],
    importpath = "github.com/buildbarn/bb-portal/ent/authschema",
    visibility = ["//visibility:public"],
    deps = [
        "//ent/gen/ent",
        "//ent/gen/ent/authenticateduser",
        "//ent/gen/ent/bazelinvocation",
        "//ent/gen/ent/build",
        "//ent/gen/ent/instancename",
        "//ent/gen/ent/invocationtarget",
        "//ent/gen/ent/privacy",
        "//ent/gen/ent/target",
        "//ent/gen/ent/testsummary",
        "//ent/schema",
        "//internal/database/dbauthservice",
        "@io_entgo_ent//entql",
    ],
)

go_test(
    name = "authschema_test",
    srcs = ["privacy_test.go"],
    deps = [
        "//ent/gen/ent/invocationtarget",
        "//ent/gen/ent/runtime",
        "//internal/database/dbauthservice",
        "//internal/database/embedded",
        "//internal/mock",
        "//test/testutils",
        "@com_github_buildbarn_bb_storage//pkg/auth",
        "@com_github_buildbarn_bb_storage//pkg/jmespath",
        "@com_github_google_uuid//:uuid",
        "@com_github_stretchr_testify//require",
        "@org_uber_go_mock//gomock",
    ],
)
