load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "schema",
    srcs = [
        "actioncachestatistics.go",
        "actiondata.go",
        "actionsummary.go",
        "artifactmetrics.go",
        "bazelinvocation.go",
        "bazelinvocationproblem.go",
        "blob.go",
        "build.go",
        "buildgraphmetrics.go",
        "cumulativemetrics.go",
        "dynamicexecutionmetrics.go",
        "evaluationstat.go",
        "eventfile.go",
        "executioninfo.go",
        "filesmetric.go",
        "garbagemetrics.go",
        "memorymetrics.go",
        "metrics.go",
        "missdetail.go",
        "namedsetoffiles.go",
        "networkmetrics.go",
        "outputgroup.go",
        "packageloadmetrics.go",
        "packagemetrics.go",
        "racestatistics.go",
        "resourceusage.go",
        "runnercount.go",
        "sourcecontrol.go",
        "systemnetworkstats.go",
        "targetcomplete.go",
        "targetconfigured.go",
        "targetmetrics.go",
        "targetpair.go",
        "testcollection.go",
        "testfile.go",
        "testresult.go",
        "testsummary.go",
        "timingbreakdown.go",
        "timingchild.go",
        "timingmetrics.go",
    ],
    importpath = "github.com/buildbarn/bb-portal/ent/schema",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/summary",
        "@com_github_google_uuid//:uuid",
        "@io_entgo_contrib//entgql",
        "@io_entgo_ent//:ent",
        "@io_entgo_ent//dialect/entsql",
        "@io_entgo_ent//schema",
        "@io_entgo_ent//schema/edge",
        "@io_entgo_ent//schema/field",
        "@io_entgo_ent//schema/index",
    ],
)
