load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "schema",
    srcs = [
        "action.go",
        "actioncachestatistics.go",
        "actiondata.go",
        "actionsummary.go",
        "artifactmetrics.go",
        "authenticateduser.go",
        "bazelinvocation.go",
        "build.go",
        "buildgraphmetrics.go",
        "buildlogchunk.go",
        "configuration.go",
        "connectionmetadata.go",
        "cumulativemetrics.go",
        "evaluationstat.go",
        "eventmetadata.go",
        "garbagemetrics.go",
        "incompletebuildlog.go",
        "instancename.go",
        "invocationfiles.go",
        "invocationtarget.go",
        "memorymetrics.go",
        "metrics.go",
        "missdetail.go",
        "mixin.go",
        "networkmetrics.go",
        "packageloadmetrics.go",
        "packagemetrics.go",
        "runnercount.go",
        "sourcecontrol.go",
        "systemnetworkstats.go",
        "target.go",
        "targetkindmapping.go",
        "targetmetrics.go",
        "testresult.go",
        "testsummary.go",
        "timingmetrics.go",
    ],
    importpath = "github.com/buildbarn/bb-portal/ent/schema",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_google_uuid//:uuid",
        "@io_entgo_contrib//entgql",
        "@io_entgo_ent//:ent",
        "@io_entgo_ent//dialect/entsql",
        "@io_entgo_ent//schema",
        "@io_entgo_ent//schema/edge",
        "@io_entgo_ent//schema/field",
        "@io_entgo_ent//schema/index",
        "@io_entgo_ent//schema/mixin",
    ],
)
