load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "schema",
    srcs = [
        "actioncachestatistics.go",
        "actiondata.go",
        "actionsummary.go",
        "artifactmetrics.go",
        "authenticateduser.go",
        "bazelinvocation.go",
        "bazelinvocationproblem.go",
        "blob.go",
        "build.go",
        "buildgraphmetrics.go",
        "buildlogchunk.go",
        "connectionmetadata.go",
        "cumulativemetrics.go",
        "evaluationstat.go",
        "eventmetadata.go",
        "executioninfo.go",
        "garbagemetrics.go",
        "incompletebuildlog.go",
        "instancename.go",
        "invocationfiles.go",
        "invocationtarget.go",
        "memorymetrics.go",
        "metrics.go",
        "missdetail.go",
        "mixin.go",
        "namedsetoffiles.go",
        "networkmetrics.go",
        "outputgroup.go",
        "packageloadmetrics.go",
        "packagemetrics.go",
        "resourceusage.go",
        "runnercount.go",
        "sourcecontrol.go",
        "systemnetworkstats.go",
        "target.go",
        "targetkindmapping.go",
        "targetmetrics.go",
        "testcollection.go",
        "testfile.go",
        "testresult.go",
        "testsummary.go",
        "timingbreakdown.go",
        "timingchild.go",
        "timingmetrics.go",
    ],
    importpath = "github.com/buildbarn/bb-portal/ent/schema",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_google_uuid//:uuid",
        "@io_entgo_contrib//entgql",
        "@io_entgo_ent//:ent",
        "@io_entgo_ent//dialect/entsql",
        "@io_entgo_ent//schema",
        "@io_entgo_ent//schema/edge",
        "@io_entgo_ent//schema/field",
        "@io_entgo_ent//schema/index",
        "@io_entgo_ent//schema/mixin",
    ],
)
