load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "api",
    srcs = [
        "bep_upload.go",
        "blob_handler.go",
    ],
    importpath = "github.com/buildbarn/bb-portal/internal/api",
    visibility = ["//:__subpackages__"],
    deps = [
        "//ent/gen/ent",
        "//ent/gen/ent/blob",
        "//pkg/archive",
        "//pkg/cas",
        "//pkg/processing",
    ],
)
