load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "bep",
    srcs = ["bep_service.go"],
    importpath = "github.com/buildbarn/bb-portal/internal/bep",
    visibility = ["//:__subpackages__"],
    deps = [
        "//ent/gen/ent/migrate",
        "//internal/api/grpc/bes",
        "//internal/api/http/bepuploader",
        "//internal/api/http/loghandler",
        "//internal/database",
        "//internal/database/common",
        "//internal/database/dbauthservice",
        "//internal/database/dbcleanupservice",
        "//internal/graphql",
        "//pkg/prometheus_metrics",
        "//pkg/proto/configuration/bb_portal",
        "@com_github_99designs_gqlgen//graphql",
        "@com_github_99designs_gqlgen//graphql/playground",
        "@com_github_buildbarn_bb_storage//pkg/auth",
        "@com_github_buildbarn_bb_storage//pkg/clock",
        "@com_github_buildbarn_bb_storage//pkg/grpc",
        "@com_github_buildbarn_bb_storage//pkg/program",
        "@com_github_buildbarn_bb_storage//pkg/util",
        "@com_github_gorilla_mux//:mux",
        "@io_opentelemetry_go_otel_trace//:trace",
        "@org_golang_google_genproto//googleapis/devtools/build/v1:build",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
    ],
)
