load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "database",
    srcs = [
        "database.go",
        "savepoint_driver.go",
        "transaction.go",
    ],
    importpath = "github.com/buildbarn/bb-portal/internal/database",
    visibility = ["//:__subpackages__"],
    deps = [
        "//ent/gen/ent",
        "//internal/database/sqlc",
        "@com_github_buildbarn_bb_storage//pkg/util",
        "@com_github_google_uuid//:uuid",
        "@io_entgo_ent//dialect",
        "@io_entgo_ent//dialect/sql",
    ],
)
