load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "graphql",
    srcs = [
        "custom.resolvers.go",
        "ent.resolvers.go",
        "resolver.go",
        "server_gen.go",
    ],
    embedsrcs = [
        "schema/custom.graphql",
        "schema/ent.graphql",
        "schema/scalars.graphql",
    ],
    importpath = "github.com/buildbarn/bb-portal/internal/graphql",
    visibility = ["//:__subpackages__"],
    deps = [
        "//ent/gen/ent",
        "//ent/gen/ent/authenticateduser",
        "//ent/gen/ent/bazelinvocation",
        "//ent/gen/ent/bazelinvocationproblem",
        "//ent/gen/ent/blob",
        "//ent/gen/ent/build",
        "//ent/gen/ent/instancename",
        "//ent/gen/ent/invocationfiles",
        "//ent/gen/ent/invocationtarget",
        "//ent/gen/ent/missdetail",
        "//ent/gen/ent/sourcecontrol",
        "//ent/gen/ent/target",
        "//ent/gen/ent/testcollection",
        "//ent/gen/ent/testresultbes",
        "//ent/gen/ent/testsummary",
        "//internal/api/grpc/bes",
        "//internal/graphql/helpers",
        "//internal/graphql/model",
        "//pkg/proto/bazelbuild/bazel/bes:build_event_stream",
        "//pkg/uuidgql",
        "@com_github_99designs_gqlgen//graphql",
        "@com_github_99designs_gqlgen//graphql/introspection",
        "@com_github_google_uuid//:uuid",
        "@com_github_vektah_gqlparser_v2//:gqlparser",
        "@com_github_vektah_gqlparser_v2//ast",
        "@io_entgo_contrib//entgql",
    ],
)
