load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "processing",
    srcs = [
        "archive.go",
        "doc.go",
    ],
    importpath = "github.com/buildbarn/bb-portal/pkg/processing",
    visibility = ["//visibility:public"],
    deps = [
        "//ent/gen/ent",
        "//ent/gen/ent/blob",
        "//pkg/summary/detectors",
    ],
)
