load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "prometheus_metrics",
    srcs = ["metrics.go"],
    importpath = "github.com/buildbarn/bb-portal/pkg/prometheus_metrics",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/promauto",
    ],
)
