load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "uuidgql",
    srcs = ["uuidgql.go"],
    importpath = "github.com/buildbarn/bb-portal/pkg/uuidgql",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_99designs_gqlgen//graphql",
        "@com_github_google_uuid//:uuid",
    ],
)
