load("@rules_go//go:def.bzl", "go_test")

go_test(
    name = "integrationtest_test",
    srcs = [
        "integration_test.go",
        "types_test.go",
        "util_test.go",
    ],
    data = glob(["testdata/**"]) + ["//frontend/src/graphql:__generated__"],
    deps = [
        "//ent/gen/ent",
        "//ent/gen/ent/runtime",
        "//internal/api/http/bepuploader",
        "//internal/database",
        "//internal/database/common",
        "//internal/database/dbauthservice",
        "//internal/database/embedded",
        "//internal/graphql",
        "//internal/mock",
        "//pkg/proto/configuration/bb_portal",
        "//pkg/testkit",
        "@com_github_99designs_gqlgen//graphql",
        "@com_github_buildbarn_bb_storage//pkg/auth",
        "@com_github_buildbarn_bb_storage//pkg/proto/configuration/auth",
        "@com_github_buildbarn_bb_storage//pkg/proto/configuration/jmespath",
        "@com_github_buildbarn_bb_storage//pkg/util",
        "@com_github_google_uuid//:uuid",
        "@com_github_machinebox_graphql//:graphql",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@io_opentelemetry_go_otel_trace//:trace",
        "@io_opentelemetry_go_otel_trace//noop",
        "@org_golang_google_protobuf//types/known/emptypb",
        "@org_uber_go_mock//gomock",
    ],
)
